# ugractf-2025-quals

./: LICENSE  README.md  SCOREBOARD.md  module.nix
advent/aaaaaa/: Dockerfile.generator  README.md  WRITEUP.md  aaaaaa.yaml  generator.py
advent/adlib/: .gitattributes  README.md  WRITEUP.md  adlib.yaml
advent/constructor/: .gitattributes  README.md  WRITEUP.md  constructor.yaml
advent/dots/: .gitattributes  README.md  WRITEUP.md  dots.yaml
advent/ikuyo/: README.md  WRITEUP.md  ikuyo.yaml
advent/kitty/: .gitattributes  README.md  WRITEUP.md  kitty.yaml
advent/racelights/: README.md  WRITEUP.md  racelights.yaml
advent/racelights/app/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
advent/racelights/app/racelights/: __init__.py  __main__.py  app.py  gunicorn.py
advent/racelights/app/racelights/static/: index.css  index.js
advent/racelights/app/racelights/templates/: index.html
advent/vip/: README.md  WRITEUP.md  vip.yaml
advent/wheel/: README.md  WRITEUP.md  wheel.yaml
advent/wiretransfer/: README.md  WRITEUP.md  decode.py  encode.py  wiretransfer.yaml
tasks/_scripts/: kyzylborda-lib-quarantine-daemon
tasks/apparentcast/: README.md  WRITEUP.md  apparentcast.yaml  generator.py
tasks/beardbox/: .gitattributes  README.md  WRITEUP.md  beardbox.yaml
tasks/boxcat/: README.md  WRITEUP.md  boxcat.yaml  docker-compose.yml  generator.py  solve.py
tasks/catbox/: README.md  WRITEUP.md  catbox.yaml  docker-compose.yml  generator.py  solve.py
tasks/craftcraft/: .gitattributes  COPYING  README.md  WRITEUP.md  (+7 more)
tasks/laundromat/laundromat/laundromat-client/: COPYING  Cargo.toml  Dioxus.toml  build
tasks/laundromat/laundromat/laundromat-client/assets/: background.avif  main.css  token.txt
tasks/laundromat/laundromat/laundromat-client/assets/coins/: 1.avif  10.avif  100.avif  1000.avif  10c.avif  1c.avif  2.avif  200.avif  2000.avif  5.avif  50.avif  500.avif  5000.avif  50c.avif  5c.avif  flag.avif
tasks/laundromat/laundromat/laundromat-client/assets/washers/: dishwasher.avif  sponge.avif  toothbrush.avif  washingmachine.avif
tasks/laundromat/laundromat/laundromat-client/src/: assets.rs  comm.rs  data.rs  main.rs
tasks/laundromat/laundromat/laundromat-server/: Cargo.toml
tasks/laundromat/laundromat/laundromat-server/src/: main.rs
tasks/sifter/controller/: Cargo.toml
tasks/sifter/controller/src/: main.rs
tasks/sifter/controller/static/: index.html
(+295 files in other folders)
