[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
reqwest = { version = "0.12.12", default-features = false }
rustix = { version = "1.0.0", features = ["fs"] }
serde = { version = "1.0.218", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
